--- a/kubernetes-maven-plugin/doc/src/main/asciidoc/inc/_enricher.adoc
+++ b/kubernetes-maven-plugin/doc/src/main/asciidoc/inc/_enricher.adoc
@@ -174,6 +174,8 @@ include::enricher/_jkube_healthcheck_wildfly_swarm.adoc[]
 
 include::enricher/_jkube_healthcheck_wildfly_jar.adoc[]
 
+include::enricher/_jkube_dnsping_wildfly_jar.adoc[]
+
 == Enricher API
 
 _How to write your own enrichers and install them._
